refactor: edit api infos, var names and comments
1. rename http reverse proxy
2. add prefix `/dashboard` to dashboard apis' swagger docs
3. uncomment logging and correct subject
